<package>
  <name>bciinterface_rosbackground</name>
  <description>
    A Background implementation for bci-interface that uses a ROS image topic
    as data source.
  </description>
  <author email="pierre.gergondet+github@gmail.com">Pierre Gergondet</author>
  <maintainer email="pierre.gergondet+github@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <version>1.0.0</version>
  <url>http://ros.org/wiki/bciinterface_rosbackground</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
</package>
